--- a/graal-native-image-test/pom.xml
+++ b/graal-native-image-test/pom.xml
@@ -14,7 +14,6 @@
   limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -26,14 +25,13 @@
   <name>Test: GraalVM Native Image</name>
 
   <properties>
-    <!-- Make the build reproducible, see root `pom.xml` -->
-    <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2024-05-19T18:54:10Z</project.build.outputTimestamp>
-
     <!-- GraalVM is JDK >= 17, however for build with regular JDK these tests
       are also executed with JDK 11, so for them exclude JDK 17 specific tests -->
     <maven.compiler.testRelease>11</maven.compiler.testRelease>
     <excludeTestCompilation>**/Java17*</excludeTestCompilation>
+
+    <!-- Overwrite property from parent -->
+    <gson.isTestModule>true</gson.isTestModule>
   </properties>
 
   <dependencies>
@@ -65,52 +63,11 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>com.github.siom79.japicmp</groupId>
-          <artifactId>japicmp-maven-plugin</artifactId>
-          <configuration>
-            <!-- This module is not supposed to be consumed as library, so no need to check API -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>animal-sniffer-maven-plugin</artifactId>
-          <configuration>
-            <!-- This module is not supposed to be consumed as library, so no need to check used classes -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <configuration>
             <!-- This module has no 'main' source code; skip creating JAR and avoid warning on console -->
             <skipIfEmpty>true</skipIfEmpty>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-install-plugin</artifactId>
-          <configuration>
-            <!-- This module has no 'main' source code, so no JAR is created which could be installed;
-              see maven-jar-plugin configuration above -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <configuration>
-            <!-- Not deployed -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-gpg-plugin</artifactId>
-          <configuration>
-            <!-- Not deployed -->
-            <skip>true</skip>
           </configuration>
         </plugin>
       </plugins>
