--- a/jpms-test/pom.xml
+++ b/jpms-test/pom.xml
@@ -28,9 +28,8 @@
     <maven.compiler.release>11</maven.compiler.release>
     <maven.compiler.testRelease>${maven.compiler.release}</maven.compiler.testRelease>
 
-    <!-- Make the build reproducible, see root `pom.xml` -->
-    <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2024-05-19T18:54:10Z</project.build.outputTimestamp>
+    <!-- Overwrite property from parent -->
+    <gson.isTestModule>true</gson.isTestModule>
   </properties>
 
   <dependencies>
@@ -51,60 +50,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>com.github.siom79.japicmp</groupId>
-          <artifactId>japicmp-maven-plugin</artifactId>
-          <configuration>
-            <!-- This module is not supposed to be consumed as library, so no need to check API -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>animal-sniffer-maven-plugin</artifactId>
-          <configuration>
-            <!-- This module is not supposed to be consumed as library, so no need to check used classes -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <configuration>
-            <!-- This module has no 'main' source code; skip creating JAR and avoid warning on console -->
-            <skipIfEmpty>true</skipIfEmpty>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-install-plugin</artifactId>
-          <configuration>
-            <!-- This module has no 'main' source code, so no JAR is created which could be installed;
-              see maven-jar-plugin configuration above -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <configuration>
-            <!-- Not deployed -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-gpg-plugin</artifactId>
-          <configuration>
-            <!-- Not deployed -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
 </project>
