--- a/metrics/pom.xml
+++ b/metrics/pom.xml
@@ -28,9 +28,8 @@
   <description>Performance Metrics for Google Gson library</description>
 
   <properties>
-    <!-- Make the build reproducible, see root `pom.xml` -->
-    <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2024-05-19T18:54:10Z</project.build.outputTimestamp>
+    <!-- Overwrite property from parent -->
+    <gson.isTestModule>true</gson.isTestModule>
   </properties>
 
   <licenses>
@@ -62,37 +61,6 @@
       <version>1.0-beta-3</version>
     </dependency>
   </dependencies>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>com.github.siom79.japicmp</groupId>
-          <artifactId>japicmp-maven-plugin</artifactId>
-          <configuration>
-            <!-- This module is not supposed to be consumed as library, so no need to check API -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>animal-sniffer-maven-plugin</artifactId>
-          <configuration>
-            <!-- This module is not supposed to be consumed as library, so no need to check used classes -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <configuration>
-            <!-- Not deployed -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
 
   <developers>
     <developer>
