Support building with JDK 21.
I think the main reason we weren't doing this before is that the ProGuard plugin
didn't support it. Apparently it does now.

--- a/pom.xml
+++ b/pom.xml
@@ -127,9 +127,7 @@
                 <!-- Enforce that correct JDK version is used to avoid cryptic build errors -->
                 <requireJavaVersion>
                   <!-- Other plugins of this build require at least JDK 11 -->
-                  <!-- Fail fast when building with JDK > 17 because it causes build failures,
-                    see https://github.com/google/gson/issues/2501 -->
-                  <version>[11,18)</version>
+                  <version>[11,21]</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
