--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
                 <!-- Enforce that correct JDK version is used to avoid cryptic build errors -->
                 <requireJavaVersion>
                   <!-- Other plugins of this build require at least JDK 11 -->
-                  <version>[11,21]</version>
+                  <version>[11,22)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
