--- a/.github/workflows/assignment-ci.yml
+++ b/.github/workflows/assignment-ci.yml
@@ -1,34 +1,20 @@
-name: UECS2363 Assignment CI Pipeline v2
+name: UECS2s363 Assignment CI Pipeline v2
 
-# This section defines the triggers for the workflow
-on:
-  # Run this pipeline whenever code is pushed to the 'main' branch
-  push:
-    branches: [ main ]
-  # Also run it whenever a pull request is created that targets the 'main' branch
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
-# This section defines the jobs to be executed
 jobs:
-  # The first job is named 'build'
   build:
-    # This specifies that the job should run on a virtual machine with Ubuntu Linux
     runs-on: ubuntu-latest
 
-    # This lists the sequence of steps for the 'build' job
     steps:
-      # Step 1: Checks out your repository's code so the job can access it
       - name: Checkout repository code
         uses: actions/checkout@v3
 
-      # Step 2: Sets up the Java Development Kit (JDK) version 11, which Gson uses
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          
-      # Step 3: Runs the Maven command to compile, test, and package the application
+          java-version: "11"
+          distribution: "temurin"
+
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
