--- a/.github/workflows/assignment-ci.yml
+++ b/.github/workflows/assignment-ci.yml
@@ -5,20 +5,16 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v3
-
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
-
       - name: Build project with Maven
         run: mvn -B verify --file pom.xml
-
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
@@ -28,35 +24,34 @@ jobs:
   test:
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v3
-
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
-
       - name: Run unit tests with Maven
         run: mvn -B verify
-
       - name: Upload test reports
         uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: gson/target/surefire-reports/
 
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: gson-jar
+          path: gson/target/
 
-
-
-
-
-
-
-
-
-
-          
+      - name: Build Docker image
+        run: docker build -t gson-app .
